--- a/apps/cz-app/src/app/header/header.component.html
+++ b/apps/cz-app/src/app/header/header.component.html
@@ -6,9 +6,9 @@
         <span class="logo">CZ APP</span>
       </button>
       <div *ngIf="!deviceXs">
-        <button mat-button>Home</button>
-        <button mat-button>About us</button>
-        <button mat-button>Contact us</button>
+        <button mat-button routerLink="/home">Home</button>
+        <button mat-button routerLink="/aboutus">About us</button>
+        <button mat-button routerLink="/contactus">Contact us</button>
       </div>
     </div>
     <div>
