--- a/apps/cz-app/src/app/aboutus/aboutus.component.html
+++ b/apps/cz-app/src/app/aboutus/aboutus.component.html
@@ -1,1 +1,5 @@
-<p>aboutus works!</p>
+<mf-app-card
+  [title]="'aboutus card'"
+  [subtitle]="'aboutus card subtitle'"
+  [description]="'aboutus card description'"
+></mf-app-card>
