--- a/apps/cz-app/src/app/home/home.component.html
+++ b/apps/cz-app/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<mf-app-card></mf-app-card>
+<mf-app-card
+  [title]="'home card'"
+  [subtitle]="'home card subtitle'"
+  [description]="'home card description'"
+></mf-app-card>
