--- a/libs/card/src/lib/card/card.component.html
+++ b/libs/card/src/lib/card/card.component.html
@@ -11,8 +11,8 @@
         class="example-header-image"
         fxLayoutAlign.xs="center center"
       ></div>
-      <mat-card-title>Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      <mat-card-title>{{ title }}</mat-card-title>
+      <mat-card-subtitle>{{ subtitle }}</mat-card-subtitle>
     </mat-card-header>
     <img
       mat-card-image
@@ -21,9 +21,7 @@
     />
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz
-        breeds of dog from Japan. A small, agile dog that copes very well with
-        mountainous terrain, the Shiba Inu was originally bred for hunting.
+        {{ description }}
       </p>
     </mat-card-content>
     <mat-card-actions>
