--- a/apps/cz-app/src/app/home/home.component.html
+++ b/apps/cz-app/src/app/home/home.component.html
@@ -1,8 +1,1 @@
-<div>
-  Welcome Home!!!!!
-</div>
-<mf-app-card
-  [title]="'home card'"
-  [subtitle]="'home card subtitle'"
-  [description]="'home card description'"
-></mf-app-card>
+<mf-home *axLazyElement="elementUrl"></mf-home>
