--- a/apps/home/src/app/app.component.html
+++ b/apps/home/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div>
-  Welcome Home!!!!!
+  Welcome Home v2!!!!!
 </div>
 <mf-app-card
-  [title]="'home card'"
-  [subtitle]="'home card subtitle'"
-  [description]="'home card description'"
+  [title]="'home card new'"
+  [subtitle]="'home card subtitle new'"
+  [description]="'home card description new'"
 ></mf-app-card>
