about us is mf now. Main app is also external

--- a/apps/cz-app/src/app/aboutus/aboutus.component.html
+++ b/apps/cz-app/src/app/aboutus/aboutus.component.html
@@ -1,8 +1,1 @@
-<div>
-  About US
-</div>
-<mf-app-card
-  [title]="'about us card'"
-  [subtitle]="'about us card subtitle'"
-  [description]="'about us card description'"
-></mf-app-card>
+<mf-aboutus *axLazyElement="elementUrl"></mf-aboutus>
