--- a/apps/home/src/app/app.component.html
+++ b/apps/home/src/app/app.component.html
@@ -1,6 +1,13 @@
 <div>
   Welcome Home v2!!!!!
 </div>
+<ag-grid-angular
+  style="width: 500px; height: 500px;"
+  class="ag-theme-alpine"
+  [rowData]="rowData"
+  [columnDefs]="columnDefs"
+>
+</ag-grid-angular>
 <mf-app-card
   [title]="'home card new'"
   [subtitle]="'home card subtitle new'"
